fields overlapping fixed in css

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,11 @@
     cursor: pointer;
 }
 
+.returned 
+{
+    overflow: inherit;
+}
+
 .ui-collapsible-content
 {
     overflow: hidden;
